[package]
name = "nextblock-shred-test-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
rustls = "0.23"
env_logger = "0.11.8"
base64 = "0.22"
tokio-stream = "0.1.17"
futures-util = { version = "0.3.31" }
pretty_env_logger = "0.5.0"
borsh = "1.6.0"
serde = "1.0.228"
async-trait = "0.1.89"
rand = "0.9.2"
reqwest = "0.12.26"
bincode = "1.3.3"
teloxide = { version = "0.17.0", features = ["macros"] }
jito-sdk-rust = "0.2.2"
serde_json = "1.0.145"
tokio = "1.48.0"
chrono = "0.4.42"
solana-streamer-sdk = "1.1.6"
log = "0.4.29"
anyhow = "1.0.100"
grpc-client = { git = "https://github.com/miaomiaowu0428/grpc-client.git" }
sol-tx-send = { git = "https://github.com/miaomiaowu0428/sol-tx-sender.git" }
solana-tx-parser = { git = "https://github.com/miaomiaowu0428/solana-tx-parser.git" }
utils = { git = "https://github.com/miaomiaowu0428/sol-utils.git" }
dotenvy = "0.15.7"
hex = "0.4.3"
nonce_cache = { git = "https://github.com/miaomiaowu0428/nonce_cache.git" }
solana-sdk = "3.0.0"
solana-client = "3.1.4"
yellowstone-grpc-proto = "10.1.1"
spl-associated-token-account = "8.0.0"
spl-token = "9.0.0"
solana-sdk-ids = "3.1.0"
solana-system-interface = "2.0.0"
solana-commitment-config = "3.1.0"
rand_chacha = "0.9.0"
rand_core = "0.9.3"
bonk-ix = { git = "https://github.com/miaomiaowu0428/bonk-ix.git" }
spl-token-2022 = { version = "10.0.0", features = ["no-entrypoint"] }
hashbrown = "0.15.5"
dashmap = "6.1.0"
once_cell = "1.21.3"
solana-nonce = "3.0.0"
solana-address-lookup-table-interface = "3.0.0"
solana-transaction-status-client-types = "3.1.4"
yellowstone-grpc-client = "10.2.0"
solana-entry = "3.1.4"
whirlwind = { git = "https://github.com/miaomiaowu0428/whirlwind.git" }
tonic = { version = "0.12", features = ["gzip"] }
prost = "0.13"

# [patch.crates-io]
# protobuf-src = { path = "./fake-protobuf-src" }

[build-dependencies]
tonic-build = "0.12"
walkdir = "2.5.0"